fixed website overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
+
 }
 
 body.hide-scroll {
@@ -14,6 +16,6 @@ body.hide-scroll {
 }
 
 
-main{
+main {
   position: relative;
 }
